--- a/src/app/routes/acme/cert/cert.component.html
+++ b/src/app/routes/acme/cert/cert.component.html
@@ -4,6 +4,5 @@
   </ng-template>
 </page-header>
 <nz-card>
-  <sf mode="search" [schema]="searchSchema" (formSubmit)="st.reset($event)" (formReset)="st.reset($event)" />
-  <st #st [data]="url" [columns]="columns" />
+  <st #st [data]="data" [columns]="columns" [loading]="loading()" />
 </nz-card>
