--- a/src/app/routes/acme/key/edit/edit.component.html
+++ b/src/app/routes/acme/key/edit/edit.component.html
@@ -1,11 +1,11 @@
 <div class="modal-header">
   <div class="modal-title">{{ title }}</div>
 </div>
-@if (i) {
-  <sf #sf mode="edit" [schema]="schema" [ui]="ui" [formData]="i" button="none">
+@if (i()) {
+  <sf #sf mode="edit" [schema]="schema" [ui]="ui" [formData]="i()" button="none">
     <div class="modal-footer">
       <button nz-button type="button" (click)="close()">关闭</button>
-      <button nz-button type="submit" nzType="primary" (click)="save(sf.value)" [disabled]="!sf.valid" [nzLoading]="loading">
+      <button nz-button type="submit" nzType="primary" (click)="save(sf.value)" [disabled]="!sf.valid" [nzLoading]="loading()">
         {{ buttonName }}
       </button>
     </div>
