--- a/src/app/routes/acme/key/key.component.html
+++ b/src/app/routes/acme/key/key.component.html
@@ -4,5 +4,5 @@
   </ng-template>
 </page-header>
 <nz-card>
-  <st #st [data]="data" [columns]="columns" />
+  <st #st [data]="data" [columns]="columns" [loading]="loading()" />
 </nz-card>
